# AIO-Module1-Conquer

./: CLAUDE.md
api/: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
api/app/: config.py  database.py  main.py  models.py  schemas.py
api/app/routers/: documents.py  rag.py
api/app/services/: chunking.py  embedding.py  llm.py  retrieval.py
api/tests/: conftest.py
api/tests/integration/: conftest.py  test_documents.py  test_rag.py
api/tests/unit/: test_chunking.py  test_documents_helpers.py  test_embedding.py  test_llm.py  test_retrieval.py
backend/: CLAUDE.md  PLAN.md  api_client.py  app.py  pyproject.toml
backend/tests/: test_api_client.py
frontend/: CLAUDE.md  api_client.py  app.py  pyproject.toml
frontend/tests/: test_api_client.py
