[project]
name = "chatbotrag-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2.3",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-experimental>=0.3.0",
    "pgvector>=0.3.6",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "pypdf>=4.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
]
