[project]
name = "chatbotrag-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
